@@ -3,6 +3,7 @@
   * Added possibility to change position of text near of icon on main display
   * Added option 'non-cache' for downloading of weather forecast data
   * Fixed bug #3760 'Missing or erroneous weather status translation'
+  * Added clutter animations
 
 0.21.10
   * Updated French tranlation
